# efm32tg-blink

./: Cargo.toml
src/: main.rs
