[package]
authors = ["Vladimir Petrigo <vladimir.petrigo@gmail.com>"]
name = "efm32tg-blink"
version = "0.1.2"
edition = "2021"

[dependencies]
cortex-m = { version = ">=0.7.7", features = [ "critical-section-single-core" ] }
cortex-m-rt = ">=0.7"
cortex-m-rtic = "1.1"
efm32tg11b-pac = { version = "0.1.3",  features = ["rt", "efm32tg11b120", "critical-section"] }

[patch.crates-io]
# efm32tg11b-pac = { git = "https://github.com/n8tlarsen/efm32tg-pacs", branch = "deps-portable-atomic"}
